--- a/adminPro/src/css/home.css
+++ b/adminPro/src/css/home.css
@@ -3,18 +3,28 @@ html {
 }
 body {
   overflow: hidden;
-  background-color: #EFEFEF;
+  background-color: #efefef;
 }
 header {
   width: 100%;
   height: 35px;
   line-height: 35px;
   background-color: #efefef;
-  padding: 0 5%;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+header .collapseItem {
+  padding: 0 2%;
+}
+header .collapseItem:hover {
+  cursor: pointer;
+  background-color: #337ab7;
+  color: #efefef;
+}
+header .personItem {
+  padding: 0 2%;
 }
 .navbar,
 .breadcrumb,
