--- a/games/find-package/game.css
+++ b/games/find-package/game.css
@@ -31,6 +31,9 @@ html,body {
 .pk4 {
 	background-image: url(./img/pk4.png);
 }
+.obj {
+	background-image: url('./img/obj.jpg');
+}
 .boom {
 	width: 100px;
 	height: 100px;
