--- a/adminPro/src/css/home.css
+++ b/adminPro/src/css/home.css
@@ -7,8 +7,8 @@ body {
 }
 header {
   width: 100%;
-  height: 35px;
-  line-height: 35px;
+  height: 45px;
+  line-height: 45px;
   background-color: #efefef;
   box-sizing: border-box;
   display: flex;
@@ -16,7 +16,8 @@ header {
   justify-content: space-between;
 }
 header .collapseItem {
-  padding: 0 2%;
+  width: 50px;
+  text-align: center;
 }
 header .collapseItem:hover {
   cursor: pointer;
@@ -85,10 +86,6 @@ ul li {
   position: absolute;
   right: 0;
   bottom: 0;
-}
-ul li ul li {
-  /*height: 0;
-    overflow: hidden;*/
 }
 .bgColor {
   background-color: #337ab7;
