--- a/adminPro/src/css/home.less
+++ b/adminPro/src/css/home.less
@@ -7,18 +7,18 @@ body{
     overflow: hidden;
     background-color: @trans-color;
 }
-
 header{
     width: 100%;
-    height: 35px;
-    line-height: 35px;
+    height: 45px;
+    line-height: 45px;
     background-color: @trans-color;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     .collapseItem{
-        padding: 0 2%;
+        width: 50px;
+        text-align: center;
         &:hover{
             cursor: pointer;
             background-color: @bg-color;
@@ -81,10 +81,6 @@ ul{
         right: 0;
         bottom: 0;
     }
-}
-ul li ul li{
-    /*height: 0;
-    overflow: hidden;*/
 }
 .bgColor{
     background-color: @bg-color;
